# scrapernhl

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  MODULARIZATION.md  README.md  audit_script.py  check_teams.py  demo_modular.py  draft.csv  final_schema.sql  game.csv  game_pbp.csv  ground_truth.py  index.html  inspect_schema.py  main_runner.py  mkdocs.yml  nhl_truth.txt  postgres-schema.sql  pyproject.toml  roster.csv  schedule.csv  scrapernhl-cli.py  season_orchestrator.py  sitemap.xml  sql_generator.py  standings.csv  sync_supabase.py  teams.csv
.github/workflows/: catchup_sync.yml  daily_nhl_sync.yml  daily_sync.yml  docs.yml  lint.yml  scrape-teams.yml  scrape.yml  scraper_sync.yml  scraper_test.yml  season_sync.yml  tests.yml
MODULARIZATION/: index.html
about/: index.html
announcements/version-014/: index.html
api/: index.html
docs/: PROJECT_REFERENCE.md  about.md  api.md  getting-started.md  index.md  schema.md
docs/announcements/: version-014.md
docs/examples/: advanced.md  cli.md  export.md  scraping.md
examples/advanced/: index.html
examples/cli/: index.html
examples/export/: index.html
examples/scraping/: index.html
getting-started/: index.html
notebooks/: 01_basic_scraping.ipynb  02_advanced_analytics.ipynb  03_data_export.ipynb  README.md
scrapernhl/: __init__.py  __main__.py  cli.py  config.py  scraper.py  scraper_legacy.py
scrapernhl/core/: http.py  utils.py
scrapernhl/scrapers/: __init__.py  draft.py  games.py  roster.py  schedule.py  standings.py  stats.py  teams.py
search/: search_index.json
tests/: test_modular.py  test_strength_fix.py
