[project]
name = "scrapernhl"
version = "0.1.4"
description = "Scraper for NHL data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.0.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.1",
    "material>=0.1",
    "mike>=2.1.3",
    "mkdocs-material>=9.7.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "requests>=2.32.5",
    "selectolax>=0.4.6",
    "urllib3>=2.6.2",
    "xgboost>=3.1.2",
]
authors = [
    {name = "Max Tixador", email = "maxtixador@gmail.com"}
]
license = {text = "MIT"}

[project.scripts]
scrapernhl = "scrapernhl.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scrapernhl*"]

[tool.setuptools.package-data]
scrapernhl = ["models/*.json", "models/*.pkl"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-macros-plugin>=1.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=scrapernhl",
    "--cov-report=html",
    "--cov-report=term-missing",
]
