[project]
name = "scrapernhl"
version = "0.1.4"
description = "A comprehensive Python package for scraping and analyzing NHL data with built-in Expected Goals (xG) modeling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Max Tixador", email = "maxtixador@gmail.com"}
]
keywords = [
    "nhl",
    "hockey",
    "sports",
    "analytics",
    "scraper",
    "data",
    "statistics",
    "xG",
    "expected-goals",
    "play-by-play",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "click>=8.0.0",
    "joblib>=1.3.0",
    "jupyterlab>=4.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "requests>=2.31.0",
    "selectolax>=0.3.0",
    "urllib3>=2.0.0",
    "xgboost>=2.0.0",
]

[project.urls]
Homepage = "https://maxtixador.github.io/scrapernhl/"
Documentation = "https://maxtixador.github.io/scrapernhl/"
Repository = "https://github.com/maxtixador/scrapernhl"
"Source Code" = "https://github.com/maxtixador/scrapernhl"
"Bug Tracker" = "https://github.com/maxtixador/scrapernhl/issues"
Changelog = "https://github.com/maxtixador/scrapernhl/blob/master/CHANGELOG.md"

[project.scripts]
scrapernhl = "scrapernhl.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scrapernhl*"]

[tool.setuptools.package-data]
scrapernhl = ["models/*.json", "models/*.pkl"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1; python_version >= '3.10'",
    "mkdocs-material>=9.7.1; python_version >= '3.10'",
    "mkdocstrings[python]>=1.0.0; python_version >= '3.10'",
    "mkdocs-git-revision-date-plugin>=0.3.2; python_version >= '3.10'",
    "mkdocs-minify-plugin>=0.8.0; python_version >= '3.10'",
    "mkdocs-macros-plugin>=1.5.0; python_version >= '3.10'",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=scrapernhl",
    "--cov-report=html",
    "--cov-report=term-missing",
]
